# ida-auth-sdk

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: config.toml  demo_auth.py  demo_kyc.py  demographics.py  main.py  otp.py  otp_generate.py  otp_verify.py
mosip_auth_sdk/: __init__.py  config.toml  requirements.txt
mosip_auth_sdk/_authenticator/: __init__.py  auth_models.py  authenticator.py
mosip_auth_sdk/_authenticator/exceptions/: __init__.py
mosip_auth_sdk/_authenticator/model/: __init__.py  auth_request.py
mosip_auth_sdk/_authenticator/utils/: __init__.py  cryptoutil.py  restutil.py
mosip_auth_sdk/authenticator/: __init__.py  authenticator.py
mosip_auth_sdk/authenticator/model/: auth_request.py
mosip_auth_sdk/authenticator/utils/: restutil.py
mosip_auth_sdk/models/: __init__.py
mosip_auth_sdk/repository/: authtoken_request_data_repository.py
